<resources>
    <string name="app_name">Masimo Sleep</string>
    <string name="radius_ppg"><![CDATA[Radius PPG™]]></string>
    <string name="radius_ppg_device_pairing_identifier"><![CDATA[Radius PPG™]]>(%1s)</string>
    <string name="location_permission_rationale_title">Location Access</string>
    <string name="location_permission_rationale_message">We need access your location to connect with nearby BLE devices</string>
    <string name="bedtime_notification_title">It\'s time to get ready for bed</string>
    <string name="bedtime_notification_body">Go to the app and start your sleep session</string>
    <string name="system_channel_name">System Notifications</string>
    <string name="system_channel_description">System level notifications such as connection state.</string>
    <string name="connecting_ispo2"><![CDATA[ Connecting to iSpO₂ Rx]]></string>
    <string name="reminders_channel_name">Reminders</string>
    <string name="reminders_channel_description">Reminder notifications such as bed time alarms.</string>
    <string name="alarm_channel_name">Alarms</string>
    <string name="alarm_channel_description">Patient level notifications such as parameter low/high alarms.</string>
    <string name="bt_disabled">Bluetooth Disabled</string>
    <string name="enable_bt_for_monitoring">Please enable Bluetooth to continue monitoring.</string>
    <string name="monitoring_via_x">Monitoring via %1$s…</string>
    <string name="searching_for_x">Searching for your %1$s…</string>
    <string name="enable">Enable</string>
    <string name="none">None</string>
    <string name="welcome_subtitle_0">Your 7-Night Sleep Checkup &#8482;</string>
    <string name="welcome_content_0"></string>
    <string name="welcome_title_1">What information is collected?</string>
    <string name="welcome_subtitle_1">Vitals</string>
    <string name="welcome_content_1"></string>
    <string name="welcome_title_2">What you get from Masimo Sleep&#8482;?</string>
    <string name="welcome_subtitle_2">- Nightly Analysis Report\n- 7-Night Checkup Report\n- Sleep Improvement Tips</string>
    <string name="welcome_content_2"></string>
    <string name="welcome_button_2">Get Started</string>
    <string name="device_onboarding_title_0">Put on Sensor</string>
    <string name="device_onboarding_subtitle_0"></string>
    <string name="device_onboarding_content_0">Remove yellow battery seal and keep it in a safe place.\nStrap Masimo Sensor around your wrist.</string>
    <string name="device_onboarding_title_1">Put on Finger</string>
    <string name="device_onboarding_subtitle_1"></string>
    <string name="device_onboarding_content_1">Place star on your fingernail. Wrap square to your finger pad. Squeeze to secure. Wrap the tape around your finger.</string>
    <string name="device_onboarding_title_2">Put on Chip</string>
    <string name="device_onboarding_subtitle_2"></string>
    <string name="device_onboarding_content_2">Press down to click in place.</string>
    <string name="device_onboarding_title_3">Check Light</string>
    <string name="device_onboarding_subtitle_3"></string>
    <string name="device_onboarding_content_3">Your device is ready to be paired when the light is blinking green.</string>
    <string name="device_onboarding_title_4">Check Distance</string>
    <string name="device_onboarding_subtitle_4"></string>
    <string name="device_onboarding_content_4">Make sure your phone is located within 10 feet</string>
    <string name="device_onboarding_title_5">Check Bluetooth</string>
    <string name="device_onboarding_subtitle_5"></string>
    <string name="device_onboarding_content_5">Make sure you\'ve turned on Bluetooth</string>
    <string name="device_onboarding_button_5">Connect</string>
    <string-array name="reminder_times">
        <item>@string/reminder_time_bedtime</item>
        <item>@string/reminder_time_15_minutes</item>
        <item>@string/reminder_time_30_minutes</item>
        <item>@string/reminder_time_45_minutes</item>
        <item>@string/reminder_time_1_hour</item>
        <item>@string/reminder_time_no_reminder</item>
    </string-array>
    <string name="reminder_time_bedtime">At bedtime</string>
    <string name="reminder_time_15_minutes">15 minutes before</string>
    <string name="reminder_time_30_minutes">30 minutes before</string>
    <string name="reminder_time_45_minutes">45 minutes before</string>
    <string name="reminder_time_1_hour">1 hour before</string>
    <string name="reminder_time_no_reminder">No reminder</string>
    <string name="sq_redLabel">Poor</string>
    <string name="sq_redSubtitle">Read Sleep Improvement Tips provided. Continue your 7-Night Sleep Checkup.</string>
    <string name="sq_redDesc">Your Sleep Halo Index is not optimal.\n\nWe noticed significant changes from your normal vitals during the night.</string>
    <string name="sq_redShortDesc">Your Sleep Halo Index&#8482; is not optimal.</string>
    <string name="sq_yellowLabel">Fair</string>
    <string name="sq_yellowSubtitle">Consider Sleep Improvement Tips provided and continue with your 7-Night Sleep Checkup to collect more data.</string>
    <string name="sq_yellowDesc">Your Sleep Halo Index is not optimal.\n\nWe noticed moderate changes from your normal vitals during the night.</string>
    <string name="sq_yellowShortDesc">Your Sleep Halo Index&#8482; is not optimal.</string>
    <string name="sq_greenLabel">Good</string>
    <string name="sq_greenSubtitle">Sleep Halo Index is within the normal range, no action necessary.</string>
    <string name="sq_greenDesc">Your Sleep Halo Index is good.\n\nWe noticed minimal changes from your normal vitals during the night.</string>
    <string name="sq_greenShortDesc">Your Sleep Halo Index&#8482; is good.</string>
    <string name="vital_title_SPO2">Oxygen Level (%)</string>
    <string name="vital_title_PR">Pulse Rate (Beats/min)</string>
    <string name="vital_title_RRP">Respiratory Rate (Breaths/min)</string>
    <string name="coffee_question">Did you have caffeine within 6 hours of bedtime?</string>
    <string name="snoring_question">Do you know if you had loud snoring last night?</string>
    <string name="alcohol_question">Did you have alcohol yesterday?</string>
    <string name="exercise_question">Did you exercise yesterday?</string>
    <string name="meds_question">Did you take something to help you sleep last night?</string>
    <string name="reco_coffee_title">Avoid caffeine before sleep</string>
    <string name="reco_coffee_subtitle">Consider eliminating your caffeine intake, it may help your sleep quality.</string>
    <string name="reco_coffee_body">Caffeine is a stimulant that helps people wake up and stay alert and energized during the day. It blocks sleep-inducing chemicals in the brain and increases adrenaline production. Caffeine should be avoided for at least six hours before bedtime.</string>
    <string name="reco_snore_title">Adjust your sleep position</string>
    <string name="reco_snore_subtitle">Consider sleeping on your side to reduce snoring.</string>
    <string name="reco_snore_body">While it is important to sleep in a comfortable position, some positions can make your snoring worse. Sleeping on your back is associated with increased snoring. Try to sleep on your side instead.</string>
    <string name="reco_beer_title">Reduce alcohol intake</string>
    <string name="reco_beer_subtitle">Consider reducing or eliminating your alcohol intake, it may help your sleep quality.</string>
    <string name="reco_beer_body">
Alcohol is not a sleep aid. It can contribute to poor sleep quality by:\n\n

• Increasing brain activity that may inhibit restorative sleep\n
• Increasing the chance of waking up at night\n
• Making snoring worse</string>
    <string name="reco_exercise_title">Get moving!</string>
    <string name="reco_exercise_subtitle">Consider adding 15 minutes or more of exercise to your daily routine.</string>
    <string name="reco_exercise_body">As little as 15 minutes of aerobic exercise, such as walking or cycling, can dramatically improve the quality of your sleep.</string>
    <string name="reco_meds_title">Sleep aid caution</string>
    <string name="reco_meds_subtitle">If you choose to take something for sleep it is best to use them only on an infrequent as needed basis.</string>
    <string name="reco_meds_body">Taking something to help you sleep is a tempting choice. When something is keeping you awake, whatever it is, it won\’t be cured with sleeping pills. At best, sleeping pills are a temporary band aid. At worst, they\’re an addictive crutch that can make insomnia worse in the long run.\n\n

 The use of sleep aids are most effective when used sparingly for short-term situations, such as traveling across time zones or recovering from a medical procedure.\n\n

If you choose to take sleeping it is best to use them only on an infrequent, \“as needed,\” basis to avoid dependence, tolerance, withdrawal, drug interactions, rebound insomnia, and masking underlying problems</string>
    <string name="reco_more_sleep_title"> Get 7 – 9 hours of sleep</string>
    <string name="reco_more_sleep_subtitle">Research shows that sleep health is improved with 7 – 9 hours of sleep per night with a consistent bedtime.</string>
    <string name="reco_more_sleep_body">Keeping a consistent bedtime with sufficient time to sleep is important. Better sleeps starts with these tips:\n\n
        • Try to keep a consistent bedtime and get up at the same time every day. If you need an alarm clock, consider an earlier bedtime.
\n\n• Adults should get 7 – 9 hours of sleep per night
\n\n• Avoid sleeping in on days off. Keeping your sleep/wake schedule is important.
\n\n• Opt for a nap when necessary. Limit naps to 15 – 20 minutes could keep from having trouble falling asleep later.</string>
    <string name="reco_maintain_title">Maintain healthy lifestyle</string>
    <string name="reco_maintain_subTitle">Keep maintaining your healthy lifestyle and daily routine</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="gender_text_hint">What is your biological sex?</string>
    <string name="set_bed_time_reminder_title">Set your bed time reminder</string>
    <string name="set_bed_time_reminder_sub_title">How far in advance do you want to be reminded?</string>
    <string name="program_started_title">Welcome to your\n7-Night Sleep Checkup&#8482;</string>
    <string name="program_started_content">We’ll be analyzing your sleep for 7 nights, measuring your oxygen level, pulse rate, and respiration rate. After each Sleep Session, you will receive a Nightly Analysis including a Sleep Halo Index and Sleep Improvement Tips. At the end of 7 nights, you will receive a 7-Night Checkup Report so you can track your progress over time.</string>
    <string name="session_no_data_title">Sleep Halo Index</string>
    <string name="session_no_data_sub_title">SLEEP HALO INDEX IS BEING COMPUTED</string>
    <string name="session_no_data_content">Collecting data</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="cancel_btn">Cancel</string>
    <string name="confirm_btn">Confirm</string>
    <string name="end_sleep_session_title">End Sleep Session?</string>
    <string name="end_sleep_session_dialog_message">Would you like to end your sleep session?</string>
    <string name="female_btn">Female</string>
    <string name="male_btn">Male</string>
    <string name="hint_select_reminder">Select a reminder time</string>
    <string name="event_occured">Events Occured</string>
    <string name="minor_major_title">Minor and Major Events</string>
    <string name="minor_event_title">Minor Event</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="major_event_title">Major Event</string>
</resources>