<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.profile.screens.ProfileGenderFragment">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/black_button"
        android:text="@string/next"
        android:textAppearance="@style/roundedButton_WhiteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/female_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/selection_button"
            android:text="@string/female_btn"
            android:textAppearance="@style/roundedButton_WhiteText"
            android:textColor="@drawable/selection_button_text" />

        <Button
            android:id="@+id/male_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/selection_button"
            android:text="@string/male_btn"
            android:textAppearance="@style/roundedButton_WhiteText"
            android:textColor="@drawable/selection_button_text" />

        <Button
            android:id="@+id/other_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/selection_button"
            android:text="@string/gender_other_description"
            android:textAppearance="@style/roundedButton_WhiteText"
            android:textColor="@drawable/selection_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/gender_text_hint"
        android:textAlignment="center"
        android:textAppearance="@style/onboardingHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>